# bank-email-fetcher

./: .gitignore  AGENTS.md  LICENSE  README.md  main.py  populate.py  pyproject.toml  seed.py
.agents/skills/add-endpoint/: SKILL.md
bank_email_fetcher/: app.py  bank_statements.py  config.py  crypto.py  db.py  deps.py  fetcher.py  linker.py  main.py  reminders.py  security.py  settings_service.py  statements.py  telegram_bot.py
bank_email_fetcher/api/: __init__.py  polling.py  sources.py  transactions.py
bank_email_fetcher/core/: __init__.py  crypto.py  dates.py  deps.py  security.py  templating.py
bank_email_fetcher/db/: __init__.py  enums.py  init_db.py  models.py
bank_email_fetcher/integrations/: __init__.py  parsers.py
bank_email_fetcher/integrations/email/: __init__.py  base.py  body.py  imap_gmail.py  jmap_fastmail.py  orchestrator.py  parsing.py
bank_email_fetcher/schemas/: emails.py  polling.py  sources.py  transactions.py
bank_email_fetcher/services/: __init__.py  accounts.py  emails.py  fetch.py  reminders.py  rules.py  settings.py  sources.py  telegram.py  transactions.py
bank_email_fetcher/services/statements/: __init__.py  bank.py  cc.py  dates.py  shared.py
bank_email_fetcher/templates/: account_edit.html  accounts.html  bank_statement_reconcile.html  base.html  dashboard.html  emails.html  rule_edit.html  rules.html  settings.html  source_edit.html  sources.html  statement_reconcile.html  statements.html  transactions.html
bank_email_fetcher/templates/partials/: email_detail.html  transaction_detail.html
bank_email_fetcher/web/: __init__.py  accounts.py  bank_statements.py  dashboard.py  emails.py  forms.py  polling.py  rules.py  settings.py  sources.py  statements.py  transactions.py
scripts/: main.py  populate.py  seed.py
tests/: test_auth.py  test_load_or_fetch_raw_email.py  test_retry_password_required_statements.py  test_transaction_notification_label.py
